v0.0.5
- Add missing trailer property

v0.0.4
- Fix missing import
- Fix typo in clearproperty
- Add SetProperty(SkinWidgets_RandomItems_Update,true) to trigger update on all randomitems

v0.0.3
- Fix wrong recommeded movies JSON-RPC request

v0.0.2
- Add option for randomitems to use the timer or on database update

v0.0.1
- Initial version that bring Watchlist and RandomItems in one service script