@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.skin.widgets" name="Skin Widgets" version="0.0.4" provider-name="Martijn">
+<addon id="service.skin.widgets" name="Skin Widgets" version="0.0.5" provider-name="Martijn">
     <requires>
         <import addon="xbmc.addon" version="11.9.7"/>
         <import addon="xbmc.python" version="2.1"/>
