@@ -8,4 +8,5 @@
         <string id="32006">Use timer</string>
         <string id="32007">After database update</string>
         <string id="32008">Update method</string>
+        <string id="32009">Recent Items</string>
 </strings>
