@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <settings>
-    <category label="Recommended">
+    <category label="32001">
         <setting label="32001" type="bool" id="recommended_enable" default="true"/>
     </category>
-    <category label="Randomitems">
+    <category label="32002">
         <setting label="32002" type="bool" id="randomitems_enable" default="true"/>
         <setting label="32003" type="bool" id="randomitems_unplayed" subsetting="true" default="true" enable="eq(-1,true)"/>
         <setting label="32005" type="bool" id="randomitems_seasonfolders" subsetting="true" default="true" enable="eq(-2,true)"/>
         <setting label="32008" type="enum" id="randomitems_method" subsetting="true" enable="eq(-3,true)" default="0" lvalues="32006|32007" />
         <setting label="32004" type="slider" id="randomitems_time" subsetting="true" enable="eq(-1,0)" default="10" range="5,5,60"  option="int"/>
+    </category>
+    <category label="32009">
+        <setting label="32002" type="bool" id="recentitems_enable" default="true"/>
+        <setting label="32003" type="bool" id="recentitems_unplayed" subsetting="true" default="true" enable="eq(-1,true)"/>
     </category>
 </settings>
